pageData resolver,store and new interceptor for header - language

--- a/frontend/src/app/components/global-event/global-event.component.scss
+++ b/frontend/src/app/components/global-event/global-event.component.scss
@@ -23,4 +23,15 @@ snack-bar-container {
             }
         }
     };
+
+    &.warning-window {
+        background: $warning-background;
+        simple-snack-bar {
+            &.mat-simple-snackbar  {
+                span {
+                    color: $text-dark;
+                }
+            }
+        }
+    };
 }
