--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -16,9 +16,9 @@
 					</mat-form-field>
 				</p>
 				
-				<p *ngIf="error" class="error">
+				<!-- <p *ngIf="error" class="error">
 					{{ error }}
-				</p>
+				</p> -->
 
 				<div class="buttons">
 					<button
