--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -26,4 +26,7 @@ $color-black025:rgba(0, 0, 0, 0.25);
 $promo-shadow-dark: rgba(18, 24, 52, 0.6);
 $img-gradient-after: rgba(18, 22, 53, 0.58);
 $success-background: #28a745;
+$warning-background: #ffc107;
+$text-dark:#343a40;
+
 //size
