Added linter and CI for frontend project

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!-- <app-root> -->
   
   <div class="container wrapper" #wrapper id="wrapper">
-    <global-preloader></global-preloader>
-    <global-event></global-event>
+    <app-global-preloader></app-global-preloader>
+    <app-global-event></app-global-event>
     <app-header></app-header>
 
 
