--- a/frontend/src/app/components/global-preloader/global-preloader.component.html
+++ b/frontend/src/app/components/global-preloader/global-preloader.component.html
@@ -1,5 +1,5 @@
  
-<!-- <global-preloader> -->   
+<!-- <app-global-preloader> -->   
 	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
 
 	<!-- <div class='container'>
@@ -14,4 +14,4 @@
 		</div>
 	  </div> -->
 
-<!-- </global-preloader> -->   
+<!-- </app-global-preloader> -->   
