--- a/frontend/src/styles/_common.scss
+++ b/frontend/src/styles/_common.scss
@@ -119,7 +119,7 @@ body {
     }
 }
 
-.global-preloader {
+.app-global-preloader {
     position: absolute;
     top: 0px;
     bottom: 0px;
@@ -129,12 +129,12 @@ body {
     display: flex;
     justify-content: center;
     z-index: 999;
-    .global-preloader_conteiner {
+    .app-global-preloader_conteiner {
         position: -webkit-sticky;
         position: sticky;
         top: 50vh;
         align-self: flex-start;
-        .global-preloader_conteiner-img {
+        .app-global-preloader_conteiner-img {
             width: 100%;
             height: 100%;
         }
