Implemented user account in UI

--- a/frontend/src/app/components/app-header/app-header.component.scss
+++ b/frontend/src/app/components/app-header/app-header.component.scss
@@ -7,9 +7,9 @@ app-header {
         z-index: 998;
         height: auto;
         padding: 7px 0px;
-        width: 100%;
+        width: 100vw;
         display: flex;
-        // background: $color-black02;
+        background: $color-black02;
         left: 0;
 
         .container {
