--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -1,6 +1,6 @@
 <!-- <app-register> -->
 
-	<mat-card class='login-form'>
+	<mat-card class='register-form'>
 		<mat-card-title>Registration</mat-card-title>
 		<mat-card-content>
 			<div [formGroup]="registerForm">
