--- a/frontend/src/app/pages/register/register.component.scss
+++ b/frontend/src/app/pages/register/register.component.scss
@@ -7,7 +7,7 @@ app-register {
     height: 100vh;
     background: $color-black04;
     overflow: hidden;
-    .login-form {
+    .register-form {
         align-self: center;
         padding: 50px;
         .helper-password {
