--- a/frontend/src/styles/_variable.scss
+++ b/frontend/src/styles/_variable.scss
@@ -28,5 +28,11 @@ $img-gradient-after: rgba(18, 22, 53, 0.58);
 $success-background: #28a745;
 $warning-background: #ffc107;
 $text-dark:#343a40;
+//account page
+$link-color: rgba(0,0,0,.5);
+$account-bg: #f7f7f8;
+$boxShadow-container: -8px 8px 14px 0 rgba(25,42,70,.11);
+$boxShadow-card: 0 0 20px 0 rgba(0,0,0,.41);
+$title-color: #17102f;
 
 //size
