--- a/frontend/src/app/components/app-header/app-header.component.html
+++ b/frontend/src/app/components/app-header/app-header.component.html
@@ -46,7 +46,9 @@
 				<div class="social-block"></div>
 				<div class="lang-box">
 					<mat-form-field>
-						<mat-select [(ngModel)]="modelLang"
+						<mat-select 
+							class="mat-lang"
+							[(ngModel)]="modelLang"
 							(openedChange)="onOpenedChange($event)">
 							<mat-option [value]='lang'
 								class="item-lang"
