--- a/frontend/src/styles/_typography.scss
+++ b/frontend/src/styles/_typography.scss
@@ -55,18 +55,17 @@
     };
 };
 
-@mixin price_card_title {
+@mixin card_title {
     font-style: normal;
     font-weight: bold;
-    font-size: 32px;
-    line-height: 46px;
-    text-transform: uppercase;
+    font-size: 28px;
+    line-height: 28px;
+    // text-transform: uppercase;
     text-align: left;
-    color: $color-white;
+    // color: $color-white;
     @media screen and ( max-width: 1199px ) {
         font-weight: 500;
         font-size: 26px;
-        line-height: 46px;
     };
     @media screen and (max-width: 767px) {
         font-size: 24px;
@@ -75,7 +74,7 @@
 };
 
 
-@mixin price_card_subtitle {
+@mixin card_subtitle {
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
